@@ -15,6 +15,7 @@
  * with this program. If not, see <http://www.gnu.org/licenses/>.
  */
 #include "solarus/entities/Tile.h"
+#include "solarus/entities/TileInfo.h"
 #include "solarus/entities/Tileset.h"
 #include "solarus/entities/TilePattern.h"
 #include "solarus/lowlevel/Surface.h"
@@ -25,45 +26,14 @@ namespace Solarus {
 
 /**
  * \brief Creates a new tile.
- * \param layer layer of the tile
- * \param xy Coordinates of the tile on the map
- * \param size Size of the tile (the pattern can be repeated).
- * \param tileset The tileset to use.
- * \param tile_pattern_id Id of the tile pattern in the tileset.
+ * \param tile_info Construction parameters.
  */
 Tile::Tile(
-    int layer,
-    const Point& xy,
-    const Size& size,
-    Tileset& tileset,
-    const std::string& tile_pattern_id
+    const TileInfo& tile_info
 ):
-  Tile(layer, xy, size, tileset, tile_pattern_id,
-       tileset.get_tile_pattern(tile_pattern_id)) {
-
-}
-
-/**
- * \brief Creates a new tile.
- * \param layer layer of the tile
- * \param xy Coordinates of the tile on the map
- * \param size Size of the tile (the pattern can be repeated).
- * \param tileset The tileset to use.
- * \param tile_pattern_id Id of the tile pattern in the tileset.
- * \param tile_pattern Tile tile pattern in the tileset.
- * Must match the id.
- */
-Tile::Tile(
-    int layer,
-    const Point& xy,
-    const Size& size,
-    Tileset& tileset,
-    const std::string& tile_pattern_id,
-    TilePattern& tile_pattern
-):
-  Entity("", 0, layer, xy, size),
-  tile_pattern_id(tile_pattern_id),
-  tile_pattern(tile_pattern) {
+  Entity("", 0, tile_info.layer, tile_info.box.get_xy(), tile_info.box.get_size()),
+  tile_pattern_id(tile_info.pattern_id),
+  tile_pattern(*tile_info.pattern) {
 
 }
 
